--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==0.12
-flask-redis==0.3.0
+Flask===2.1.2
+Flask-Redis=0.4.0
 packaging==16.8
-requests==2.13.0
+requests==2.28.0
 sh==1.12.10
-gunicorn==19.7.0
+gunicorn==20.1.0
 ansible==2.2.1
-celery==4.0.2
+celery==5.2.7
